# Claudecode2opencode-Bridge

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TESTING.md  USER_MANUAL.md  __init__.py  browser.py  commands.py  compactor.py  generate_shims.py  hooks.py  install-plugin.sh  install.sh  loader.py  mcp.py  system_prompt.py  test_models.sh  test_models_opencode.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
agent/: cc2oc-bridge.md
dev-browser/: .env.example  .gitignore  README.md  auth_manager.py  client.py  package.json  pyproject.toml  server.sh
docs/: DIRECTIVE.md  TEST_PLAN.md
examples/: auto-format-hook.md  code-reviewer-agent.md  hello-command.md
plugins/test-plugin/: plugin.json
plugins/test-plugin/core/references/: guidelines.md
plugins/test-plugin/core/templates/: example.md
plugins/test-plugin/hooks/: hooks.json
shims/: __init__.py  tools.py
test_results/: model_test_20260111_210414.md  opencode_test_20260111_211029.md
