[project]
name = "dev-browser"
version = "1.0.0"
description = "Persistent browser automation server with LLM-friendly ARIA snapshots and auto-login"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "playwright>=1.49.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
